--- a/Views/Web.config
+++ b/Views/Web.config
@@ -19,6 +19,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="SitecoreCaseStudy" />
 		<add namespace="Sitecore.Mvc" />
+		<add namespace="PagedList" />
+		<add namespace="PagedList.Mvc" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
