--- a/packages.config
+++ b/packages.config
@@ -28,6 +28,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Mvp.Xml" version="2.3.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
   <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
   <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net472" />
