--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net472" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net472" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Caching" version="6.0.1304.0" targetFramework="net472" />
@@ -30,8 +31,15 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
   <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
+  <package id="Sitecore.Abstractions" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Annotations" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.ContentSearch" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.ContentSearch.ContentExtraction" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.ContentSearch.Data" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.ContentSearch.Linq" version="9.2.0" targetFramework="net472" />
   <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net472" />
   <package id="Sitecore.Logging" version="9.2.0" targetFramework="net472" />
   <package id="Sitecore.Logging.Client" version="9.2.0" targetFramework="net472" />
@@ -41,6 +49,8 @@
   <package id="Sitecore.NVelocity" version="9.2.0" targetFramework="net472" />
   <package id="Sitecore.Web" version="9.2.0" targetFramework="net472" />
   <package id="Sitecore.Zip" version="9.2.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Xml" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
